Fix to grouped markers being slightly too big compared to regular markers

--- a/style/default.css
+++ b/style/default.css
@@ -951,8 +951,8 @@ input:checked~.icon-moon {
 }
 
 .split-marker-pin {
-    width: 40px;
-    height: 40px;
+    width: 36px;
+    height: 36px;
     transform: rotate(-45deg);
     border-radius: 50% 50% 50% 0;
     overflow: hidden;
